# particle-filter

./: .gitignore  README.md  pyproject.toml
emu_filter/: importance.py  outputs.py  pfilter.py  state_model.py
emu_filter/efjax/: importance.py  outputs.py  state_model.py
notebooks/: continous_stochastic_sir.ipynb  particle_filter.ipynb  particle_filter_jax.ipynb  particle_filter_walk.ipynb  pfjax_proto_split.ipynb
